[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/gui/png/Window.png" type="Texture" id=1]
[ext_resource path="res://Fuentes/Candy_Randy/candyrandy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/Pregunta/Pregunta.gd" type="Script" id=3]
[ext_resource path="res://Fuentes/TEMPSITC.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/gui/botones/boton_lechuga.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/botones/boton_plomo.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/botones/boton_Verde.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/botones/boton_rojo.png" type="Texture" id=8]
[ext_resource path="res://Fuentes/MTCORSVA.TTF" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_color = Color( 0.921569, 0.890196, 0.866667, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 43
outline_size = 1
use_mipmaps = true
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.847059, 0.494118, 0.419608, 1 )

[sub_resource type="StyleBoxLine" id=17]
color = Color( 0.870588, 0.705882, 0.584314, 1 )

[sub_resource type="StyleBoxLine" id=16]
color = Color( 0.847059, 0.494118, 0.419608, 1 )

[sub_resource type="StyleBoxLine" id=18]
color = Color( 0.870588, 0.705882, 0.584314, 1 )

[sub_resource type="StyleBoxLine" id=15]
color = Color( 0.94902, 0.203922, 0.0431373, 1 )

[sub_resource type="StyleBoxLine" id=14]
color = Color( 0.870588, 0.705882, 0.584314, 1 )

[sub_resource type="DynamicFont" id=9]
size = 40
outline_size = 2
outline_color = Color( 0.870588, 0.705882, 0.584314, 1 )
extra_spacing_char = 7
extra_spacing_space = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 52
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=11]
resource_name = "entrada"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0249983, 0.0236465 ), Vector2( 0.158279, 0.14582 ), Vector2( 0.397885, 0.399063 ), Vector2( 0.561519, 0.589969 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "salida"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 527.958, 304.726 ), Vector2( 526.01, 365.115 ), Vector2( 526.01, 322.259 ), Vector2( 526.01, 363.167 ), Vector2( 526.01, 343.687 ), Vector2( 549.386, 452.776 ), Vector2( 796.785, 937.833 ) ]
}

[node name="Pregunta" type="Sprite"]
position = Vector2( 527.958, 304.726 )
scale = Vector2( 0.561519, 0.589969 )
texture = ExtResource( 1 )
vframes = 5
hframes = 4
frame = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="."]
margin_left = -197.535
margin_top = -432.892
margin_right = 209.465
margin_bottom = -361.892
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.705882, 0.584314, 1 )
text = "PREGUNTA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_pregunta" type="Label" parent="."]
margin_left = -368.0
margin_top = -140.0
margin_right = 337.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.964706, 0.952941, 1 )
text = "ESTE ES UN TEXTO DE PREGUNTA PARA LA PRUEBA JEJEJE?"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = -356.0
margin_top = 104.0
margin_right = 351.0
margin_bottom = 262.0
custom_styles/cursor = SubResource( 13 )
custom_styles/selected_focus = SubResource( 17 )
custom_styles/bg_focus = SubResource( 16 )
custom_styles/cursor_unfocused = SubResource( 18 )
custom_styles/selected = SubResource( 15 )
custom_styles/bg = SubResource( 14 )
custom_fonts/font = SubResource( 9 )
custom_colors/guide_color = Color( 0.870588, 0.705882, 0.584314, 1 )
custom_colors/font_color_selected = Color( 0.94902, 0.203922, 0.0431373, 1 )
custom_colors/font_color = Color( 0.807843, 0.545098, 0.352941, 1 )
max_text_lines = 3
auto_height = true
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_continuar" type="TextureButton" parent="."]
margin_left = -194.574
margin_top = 308.0
margin_right = 176.426
margin_bottom = 424.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_continuar"]
margin_left = 21.0
margin_top = 35.0
margin_right = 353.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.980392, 0.964706, 0.952941, 1 )
text = "CONTINUAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim_pregunta" type="AnimationPlayer" parent="."]
autoplay = "entrada"
anims/entrada = SubResource( 11 )
anims/salida = SubResource( 12 )
[connection signal="sel" from="." to="." method="_on_Pregunta_sel"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="btn_continuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="animation_finished" from="anim_pregunta" to="." method="_on_anim_pregunta_animation_finished"]
